# wg_rust_course_2

auction/: Cargo.toml  README.md
homework-002-distance/: Cargo.toml
homework-002-distance/src/: main.rs
homework-003-node-in-the-middle/: .hint  .hint2  Cargo.toml
homework-003-node-in-the-middle/src/: main.rs
homework-004-pencil-and-paper-addition/: Cargo.toml  nightly-rustfmt.toml
homework-004-pencil-and-paper-addition/src/: main.rs
homework-005-pencil-and-paper-addition-generic-edition/: Cargo.toml
homework-005-pencil-and-paper-addition-generic-edition/example/: main.rs
homework-005-pencil-and-paper-addition-generic-edition/src/: main.rs
