[package]
name = "auction"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arc-swap = "1.6"
axum = "0.7"
crossbeam = "0.8"
parking_lot = "0.12"
rusty_ulid = { version = "2", default-features = false, features = ["rand", "time", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
